# UpinfoPy

./: .gitignore  LICENSE  README.cn.md  README.md  Taskfile.yml  cmd.md  pyproject.toml  setup.py  tasks.py
doc/: index.ts
docs/: index.md
src/: upinfo78.ts
src/upinfo78/: __init__.py  upinfo78.py
src/upinfopy/: __init__.py  api78.py  upinfo.py  upinfopy.py
tests/: test_upinfo78.py  test_upinfopy.py
